[gd_scene load_steps=7 format=2]

[ext_resource path="res://Weapon.tscn" type="PackedScene" id=1]
[ext_resource path="res://Items/FireExtinguisher/fireextinguisher.obj" type="ArrayMesh" id=2]
[ext_resource path="res://Items/FireExtinguisher/FireExtinguisherTexAtlas.png" type="Texture" id=3]
[ext_resource path="res://Items/FireExtinguisher/ExtinguishingParticles.tscn" type="PackedScene" id=4]
[ext_resource path="res://Items/FireExtinguisher/FireExtinguisher.gd" type="Script" id=5]

[sub_resource type="SpatialMaterial" id=1]
albedo_texture = ExtResource( 3 )

[node name="FireExtinguisher" instance=ExtResource( 1 )]
script = ExtResource( 5 )

[node name="ExtMesh" type="MeshInstance" parent="." index="0"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0 )
mesh = ExtResource( 2 )
material/0 = SubResource( 1 )

[node name="ParticleStart" type="Position3D" parent="ExtMesh" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 1, 8.74228e-08 )

[node name="ExtinguishingParticles" parent="ExtMesh/ParticleStart" index="0" instance=ExtResource( 4 )]
transform = Transform( -2.04569e-07, 2.34, -4.053, 0, 4.053, 2.34, 4.68, 1.02285e-07, -1.77162e-07, 0.5, 0.2, 2.18557e-08 )

[node name="Timer" type="Timer" parent="." index="1"]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
